# python-dcel-mesh

./: LICENSE  README.md  mesh.py  pyproject.toml
src/dcelmesh/: __init__.py  mesh.py
