[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dcel-mesh"
version = "0.0.1"
authors = [
  { name="Stephen Jasina", email="stephenjasina@gmail.com" },
]
description = "An implementaion of a doubly connected edge list"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/StephenJasina/python-dcel-mesh"
"Bug Tracker" = "https://github.com/StephenJasina/python-dcel-mesh/issues"